# Chat

./: .gitignore
Chat/: CMakeLists.txt  Chat.h  Log.h  main.cpp
Chat/BoostClientServer/: Chat.h  ChatClient.h  ChatDatabase.cpp  ChatInterfaces.h  ChatModel.h  ChatServer.h  Server.cpp  Server.h  ServerSession.h  TcpClient.h  server_main.cpp
Chat/Client/: ChatClient.h  ClientInterfaces.h  TcpClient.h  Terminal.h  client_main.cpp
Chat/UIChat/: CMakeLists.txt  ChatRoomConnect.cpp  ChatRoomConnect.h  ChatRoomConnect.ui  CreateChatRoom.cpp  CreateChatRoom.h  CreateChatRoom.ui  DeleteChatRoomDialog.cpp  DeleteChatRoomDialog.h  DeleteChatRoomDialog.ui  LeaveChatRoomDialog.cpp  LeaveChatRoomDialog.h  LeaveChatRoomDialog.ui  Protocol.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Types.h  Utils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Chat/UIChat/Client/: ChatClient.h  ClientInterfaces.h  TcpClient.h  Terminal.h
